--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -3,19 +3,20 @@
 <html lang='en'>
     <head>
         <meta charset='utf-8'>
-        <title>{{template "title" .}} - Sinppets App</title>
-         <!-- Link to the CSS stylesheet and favicon -->
+        <title>{{template "title" .}} - Snippets App</title>
         <link rel='stylesheet' href='/static/css/main.css'>
         <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
-        <!-- Also link to some fonts hosted by Google -->
         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
     </head>
     <body>
         <header>
-            <h1><a href='/'>Sinppets App</a></h1>
+            <h1><a href='/'>Snippets App</a></h1>
         </header>
         {{template "nav" .}}
         <main>
+            {{with .Flash}}
+                <div class='flash'>{{.}}</div>
+            {{end}}
             {{template "main" .}}
         </main>
         <footer>
