--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,6 +1,20 @@
 {{define "nav"}}
- <nav>
-    <a href='/'>Home</a>
-    <a href='/snippets/create'>Create snippet</a>
+<nav>
+    <div>
+        <a href='/'>Home</a>
+        {{if .IsAuthenticated}}
+            <a href='/snippets/create'>Create snippet</a>
+        {{end}}
+    </div>
+    <div>
+        {{if .IsAuthenticated}}
+            <form action='/users/logout' method='POST'>
+                <button>Logout</button>
+            </form>
+        {{else}}
+            <a href='/users/signup'>Signup</a>
+            <a href='/users/login'>Login</a>
+        {{end}}
+    </div>
 </nav>
 {{end}}
